--- a/force-app/main/default/classes/testclass.cls
+++ b/force-app/main/default/classes/testclass.cls
@@ -1,5 +1,10 @@
 public with sharing class testclass {
     public testclass() {
+        
+        
+    }
 
+    public void getTest(){
+        System.debug('push data on github');
     }
 }
