--- a/force-app/main/default/classes/testclass.cls
+++ b/force-app/main/default/classes/testclass.cls
@@ -6,5 +6,6 @@ public with sharing class testclass {
 
     public void getTest(){
         System.debug('push data on github');
+        System.debug('Again Check');
     }
 }
